packages/components/src/css/component/Form.module.scss
/* ... */
.formQuantitySelectorInput {
    composes: formInput;

    margin: -1px 0;
    padding-left: 0;
    padding-right: 0;
    border-radius: 0;
    font-variant-numeric: tabular-nums;
    font-weight: 700;
    text-align: center;

    @include mixin.hover {
        border-color: var(--surface-stroke-hover);
    }

    &,
    &:focus-visible,
    &:focus-within {
        outline: 0 !important;
    }

    & {
        -moz-appearance: textfield;
    }

    &::-webkit-outer-spin-button,
    &::-webkit-inner-spin-button {
        -webkit-appearance: none;
        margin: 0;
    }
}

.formPinInput {
    display: grid;
    width: min-content;
    gap: .4ch;
    grid-template-columns: repeat(var(--max-length, 0), 1fr);
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 24px;
    font-weight: 700;
}

.formPinInputField {
    padding: 0;
    width: 2.7ch;
    border: 1px solid var(--surface-stroke);
    border-radius: var(--radius);
    box-shadow: var(--shadow-px);
    font: inherit;
    line-height: 3.3ch;
    outline: 0;
    text-align: center;
    transition: var(--transition-default);
    transition-property: border-color, mixin.focus-ring-transition-properties();
}

.formPinInputEnabled {
    composes: formPinInput;

    .formPinInputField {
        background-color: var(--surface);
        color: var(--foreground-prominent);

        @include mixin.focus-ring(-1px, true);
    }
}

.formPinInputDisabled {
    composes: formPinInput;

    .formPinInputField {
        background-color: var(--surface-disabled);
        color: var(--foreground-secondary);
        cursor: not-allowed;
    }
}

.formToggle {
    position: relative;
    display: block;
    width: 54px;
    height: 30px;
    flex: 0 0 auto;
    background: var(--gray-50);
    border: 1px solid var(--gray-200);
    border-radius: var(--radius-full);
    contain: paint;

    @include mixin.focus-outline;

    &:has(.formToggleInput:focus-visible) {
        @include mixin.focus-outline-visible(2px);
    }

    &.isChecked {
        border-color: transparent;

        .formToggleInput::after {
            translate: 24px 0;
        }

        &:not(.isSwitch) {
            background: var(--primary-600);

            .formToggleIcon {
                color: var(--primary-25);
            }

            .formToggleInput::after {
                border-color: transparent;
            }
        }

        .formToggleIconOn {
            translate: calc(-50% + 24px) -50%;
        }
    }

    &:not(.isChecked) .formToggleIconOff {
        translate: calc(-50% - 24px) -50%;
    }

    &.isDisabled {
        cursor: not-allowed;
        opacity: .6;
    }

    &.isReadonly .formToggleInput {
        pointer-events: none;
    }

    &.isInvalid {
        border-color: var(--danger-500);
    }
}

.formToggleIcon {
    position: absolute;
    top: 50%;
    color: var(--foreground-secondary);
    pointer-events: none;
    translate: -50% -50%;
}

.formToggleIconOff {
    composes: formToggleIcon;

    left: 15px;
}

.formToggleIconOn {
    composes: formToggleIcon;

    left: 39px;
}

.formToggleInput {
    -webkit-appearance: none;
    appearance: none;

    position: relative;
    display: block;
    margin: 0;
    height: inherit;
    width: inherit;
    background: unset;
    border: 0;
    border-radius: inherit;
    cursor: pointer;
    outline: 0;

    &::after {
        position: absolute;
        display: block;
        top: 2px;
        left: 2px;
        height: 24px;
        width: 24px;
        content: '';
        background: var(--surface);
        border: 1px solid var(--surface-stroke);
        border-radius: var(--radius-full);
        box-shadow: var(--shadow-sm);
    }
}

.formToggle,
.formToggleIcon,
.formToggleInput,
.formToggleInput::after {
    transition: 210ms var(--swift-out);
    transition-property: background, border-color, color, opacity, scale, translate, mixin.focus-ring-transition-properties();
}

.formTagsInput {
    composes: formInput;

    display: flex;
    height: unset;
    min-height: 42px;
    padding: 4px 6px;
    align-items: center;
    flex-wrap: wrap;
    gap: 6px;
    cursor: text;

    &:not(.formTagsInputDisabled) {
        @include mixin.focus-ring(-1px, true);
    }
}

.formTagsInputEnabled {
    composes: formTagsInput;
}

.formTagsInputDisabled {
    composes: formTagsInput;

    background: var(--gray-100);
    cursor: not-allowed;
}

.formTagsInputField {
    height: 30px;
    min-width: 60px;
    flex: 1 1 60px;
    background: none;
    border: 0;
    color: inherit;
    font: inherit;
    outline: 0;

    &::placeholder {
        color: var(--foreground-secondary);
    }

    &:disabled {
        cursor: not-allowed;
    }
}

.formTagsInputPopup {
    composes: formSelectPopup;
}

